--- a/src/main/resources/application-memfiredb.yml
+++ b/src/main/resources/application-memfiredb.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://47.102.127.65:5433/dbc3336ece630249b090faa5fb78f9bb30study
+    url: jdbc:postgresql://47.102.127.65:5433/dbc3336ece630249b090faa5fb78f9bb30study?rewriteBatchedStatements=true
     username: postgre
     password: HgmUXNXiKZp4NBj
