--- a/src/main/resources/application-memfiredb.yml
+++ b/src/main/resources/application-memfiredb.yml
@@ -3,3 +3,5 @@ spring:
     url: jdbc:postgresql://47.102.127.65:5433/dbc3336ece630249b090faa5fb78f9bb30study??reWriteBatchedInserts=true
     username: postgre
     password: HgmUXNXiKZp4NBj
+    hikari:
+      maximum-pool-size: 5
