--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -3,3 +3,5 @@ spring:
     url: jdbc:mariadb://localhost:3306/study?serverTimezone=Etc/GMT-8&rewriteBatchedStatements=true
     username: root
     password: 123456
+    hikari:
+      maximum-pool-size: 10
